Finalizando cambios de color de fondo

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body {
   font-family: Arial, sans-serif;
-  background-color: #a4e0dc;
+  background-color: #86beeb;
   margin: 0;
   padding: 0;
   font-size: 14px;
