--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,8 @@ body {
 
 h1, h2 {
   text-align: center;
-  color: #00796b;
+  color: #041254;
+  font-weight:inherit;
 }
 
 form {
@@ -40,7 +41,7 @@ input, select {
 button {
   margin-top: 20px;
   padding: 10px;
-  background-color: #00796b;
+  background-color: #182192;
   color: white;
   border: none;
   border-radius: 5px;
@@ -48,7 +49,7 @@ button {
 }
 
 button:hover {
-  background-color: #004d40;
+  background-color: #180458;
 }
 
 #resultado {
@@ -85,7 +86,7 @@ button:hover {
   position: fixed;
   bottom: 20px;
   right: 20px;
-  background-color: #ff9800;
+  background-color: #80ff00;
   color: white;
   padding: 14px 18px;
   border-radius: 50px;
